<resources>
    <string name="app_name">BGUv2</string>
    <string name="action_settings">Settings</string>

    <string name="search">Поиск</string>
    <string name="internet_connect">
        Проверьте подключение к интернету!
    </string>
    <string name="userProduct">Добавить ваш продукт в базу</string>

    <string name="item">Item</string>

    <string name="kkals">Калории</string>
    <string name="prots">Белки</string>
    <string name="fats">Жиры</string>
    <string name="carbs">Углеводы</string>
    <string name="add">Добавить</string>
    <string name="weight_g">Вес, г</string>

    <string name="if_user_product_list_is_empty">
        Вы ещё не добавили продукты за день!
    </string>

    <string name="week_statistic">Статистика за неделю</string>
    <string name="month_statistic">Статистика за месяц</string>
    <string name="bgu_whole_day">Статистика за день</string>
    <string name="statistic">Статистика</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
